--- a/instructions.html
+++ b/instructions.html
@@ -113,7 +113,7 @@
                     <ul class="nav navbar-nav">
                       <li><a href="index.html"> HOME </a></li>                  
                       <li><a href="instructions.html">HOW TO USE</a></li>
-                      <li><a href="https://github.com/AM1467/ERD-Tool/">SOURCE CODE</a></li>
+                      <li><a href="https://github.com/AM1467/AM1467.github.io">SOURCE CODE</a></li>
                     </ul>
 
                   </div>
